# OpenDCF

./: .env.example  .gitignore  ARCHITECTURE.md  ASSUMPTIONS_AUDIT.md  README.md  pyproject.toml  seed_data.py
alembic/: env.py
alembic/versions/: 05dc92aac394_add_recovery_structures.py  1e4c0d2a9b11_add_timed_concession_fields_to_market_profiles.py  2c28002c64b2_initial_schema.py  370a1b263778_add_projected_annual_sales_to_leases.py  3d3206d033aa_add_capital_projects.py  4b8e6f1a2c3d_add_pv_breakdown_to_valuations.py  6f4f0325f8a1_add_transfer_tax_assumptions_and_terminal_.py  8c1b2f0f34ad_scope_tenants_to_properties.py  9a4d1d0c61f5_add_result_avg_occupancy_pct_to_valuations.py  a9f1bde6c4f2_add_comment_fields_to_inputs_and_assumptions.py  b1f4f5f2f85e_add_valuation_gross_up_controls.py  c7f31e19d4aa_add_analysis_start_date_override_to_.py  cdf6c450991d_add_result_tenant_cash_flows_json_to_.py  dc63bb01b464_add_market_leasing_profile_id_to_suites.py  e3bc24a08a92_add_base_year_stop_amount_to_leases.py  f2c3a94c6d21_add_recovery_audit_json_to_valuations.py
frontend/: app.js  index.html  style.css
src/: config.py  main.py
src/api/: capital.py  expenses.py  leases.py  market_assumptions.py  other_income.py  properties.py  recovery_structures.py  router.py  suites.py  tenants.py  valuations.py
src/db/: session.py
src/engine/: date_utils.py  dcf.py  expense_engine.py  growth.py  lease_projector.py  property_cashflow.py  renewal_engine.py  transfer_tax.py  types.py  waterfall.py
src/models/: __init__.py  base.py  capital.py  expense.py  (+6 more)
tests/: conftest.py
(+30 files in other folders)
